--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -181,7 +181,23 @@ Stock Score | Stock Info
 <div class="row mb-2">
     <div class="col">
         <div class="card mb-1">
-            Similar companies:
+            <div class="card-body p-2 pt-0">
+                <div class="card-header p-1">Similar companies:</div>
+                <div class="d-flex justify-content-between similar-companies"></div>
+            </div>
+<!--            <div class="card overflow-hidden">-->
+<!--                <div class="bg-holder bg-card" style="background-image:url({{ url_for('static', filename='falcon/assets/img/icons/spot-illustrations/corner-2.png') }});"></div>-->
+<!--                <div class="card-body position-relative">-->
+<!--                  <div class="display-4 fs-2 mb-2 fw-normal font-sans-serif text-info" >MSFT</div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="card overflow-hidden">-->
+<!--                <div class="bg-holder bg-card" style="background-image:url({{ url_for('static', filename='falcon/assets/img/icons/spot-illustrations/corner-2.png') }});"></div>-->
+<!--                <div class="card-body position-relative">-->
+<!--                  <div class="display-4 fs-2 mb-2 fw-normal font-sans-serif text-info" >MSFT</div>-->
+<!--                </div>-->
+<!--            </div>-->
+
         </div>
     </div>
 </div>
