--- a/app/templates/userview/algotraderSettings_new.html
+++ b/app/templates/userview/algotraderSettings_new.html
@@ -189,6 +189,21 @@ Stock Score | Settings
                                 </div>
                             <div class="w-100"></div>
                             <div class="col-12 pt-2 d-flex justify-content-center">
+                                <div class="ps-2">
+                                    <div class="form-check form-switch mb-0 lh-1 d-flex align-items-center ">
+                                      <input class="form-check-input m-2" type="checkbox"
+                                             id="notify_candidate_signal"
+                                             name="notify_candidate_signal" {%if
+                                           user_settings.notify_candidate_signal%}
+                                           checked
+                                           {% endif %} />
+                                        <h5 class="">Notify on entry points<span title="Send email when target price for position open is crossed" class="fs--2 ms-1 text-primary" data-bs-toggle="tooltip" data-bs-placement="top" >
+                                        <span class="fas fa-question-circle"></span></span></h5>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="w-100"></div>
+                            <div class="col-12 pt-2 d-flex justify-content-center">
                                 <button type="submit" class="btn btn-primary">Save</button>
                             </div>
 
