--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -327,7 +327,7 @@ Stock Score | Stock Info
                         <div class="card-body tab-news-card">
                             This quoter estimation :
                         </div>
-                    </div>`
+                    </div>
                     <div class="main-card mb-3 card">
                         <div class="card-body tab-analysts-card">
 
