--- a/app/templates/partial/user_candidates.html
+++ b/app/templates/partial/user_candidates.html
@@ -14,7 +14,7 @@
 </div>
 <div id="tableExample" data-list='{"valueNames":["ticker","price","age"],"page":5,"pagination":true}'>
   <div class="table-responsive scrollbar">
-    <table id="filtered_candidates_table" class="table table-hover table-striped fs--1 mb-0">
+    <table id="filtered_candidates_table" class="table fs--1 mb-0">
       <thead class="bg-200 text-900">
         <tr>
           <th class="sort" data-sort="ticker">Ticker</th>
