--- a/app/templates/admin/notification_statistic.html
+++ b/app/templates/admin/notification_statistic.html
@@ -3,101 +3,107 @@
 Stock Score | Notifications
 {% endblock %}
 {% block content %}
-<div class="ui stackable grid container">
-    <div class="sixteen wide tablet sixteen wide computer centered column">
-        <a class="ui basic compact button" href="{{ url_for('admin.index') }}">
-            <i class="caret left icon"></i>
+
+<div class="row mb-3">
+    <div class="col">
+        <a class="btn btn-outline-secondary btn-sm mb-3" href="{{ url_for('admin.index') }}">
+            <i class="fas fa-caret-left"></i>
             Back to dashboard
         </a>
-        <h2 class="ui header">
-            Notification statistic
-            <div class="sub header">
-                Spider process data
-            </div>
-        </h2>
-
-        <div class="ui menu">
-            <div class="ui left search item">
-                <div class="ui transparent icon input">
-                    <input id="search-users" type="text" placeholder="Search data…">
-                    <i class="search icon"></i>
+        <div class="card bg-100 shadow-none border">
+            <div class="row gx-0 flex-between-center">
+                <div class="col-sm-auto d-flex align-items-center">
+                    <img class="ms-n2" src="/static/falcon/assets/img/illustrations/crm-bar-chart.png" alt="" width="90">
+                    <div>
+                        <h4 class="text-primary mb-0">Notification statistic </h4>
+                        <h6 class="text-primary fs--1 fw-bold mb-0">StockScore <span class="text-info fw-medium">Company</span></h6>
+                    </div>
                 </div>
-            </div>
-            <div class="ui left item last-item notification-status-item">
-                <div class="widget-content">
-                    <div class="widget-content-outer">
-                        <div class="widget-content-wrapper">
-                            <div class="widget-content-left">
-                                <div class="widget-numbers fsize-1 text-muted notification-percent">100%</div>
+                <div class="col-md-4 p-3">
+                    <div class="row g-0 align-items-center pb-3">
+                        <div class="col pe-4">
+                            <div class="d-flex">
+                                <h6 class="fs--1 text-600 notification-status">Notification Process</h6>
                             </div>
-                            <div class="widget-content-right">
-                                <div class="opacity-5 pl-4 notification-status">notifications finished</div>
+                            <div class="progress" style="height:5px">
+                                <div class="progress-bar rounded-3 bg-primary notification-progress-bar" role="progressbar" style="width: 50% " aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <div class="widget-content-right">
-                                <div class="opacity-5 pl-4 notification-date-status"></div>
+                            <div class="d-flex">
+                                <h6 class="fs--2 text-400 notification-date-status pt-1">2021-12-22</h6>
                             </div>
                         </div>
-                        <div class="widget-progress-wrapper mt-1">
-                            <div class="progress-bar-sm progress-bar-animated-alt progress">
-                                <div class="notification-progress-bar progress-bar bg-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
-                            </div>
+                        <div class="col-auto text-end">
+                            <p class="mb-0 text-900 font-sans-serif notification-percent">
+                                43.6%
+                            </p>
+                            <p class="mb-0 fs--2 text-500 fw-semi-bold"><span class="text-600 notif-sended">18</span> of <span class="all-notif">179</span></p>
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-auto pe-3">
+                    <a class="btn btn-outline-primary btn-sm mb-3" href="{{ url_for('connections.notifications_process') }}">
+                        Run Process
+                    </a>
+                </div>
             </div>
-
-        </div>
-
-        {# Use overflow-x: scroll so that mobile views don't freak out
-        # when the table is too wide #}
-        <div style="overflow-x: scroll;">
-            <table class="ui searchable sortable unstackable selectable celled table">
-                <thead>
-                <tr>
-                    <th>Process start time</th>
-                    <th>Update status</th>
-                    <th>Last Update Date</th>
-                    <th>Process Time</th>
-                    <th>AVG time by user</th>
-                    <th>Num of users</th>
-                    <th>Received notifications</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for s in notifications %}
-                <tr>
-                    <td class="text-center">
-                        {{s["start_process_time"]}}
-                    </td>
-                    <td class="text-center">
-                        {%if s["error_status"] == 0%}
-                        <i class="check icon green"></i>
-                        {%else%}
-                        <i class="times icon red"></i>
-                        {%endif%}
-                    </td>
-                    <td class="text-center">
-                        {{s["last_update_date"]}}
-                    </td>
-                    <td class="text-center">
-                        {{s["process_time"]}}
-                    </td>
-                    <td class="text-center">
-                        {{s["avg_time"]|round(2)}}
-                    </td>
-                    <td class="text-center">
-                        {{s["num_users"]}}
-                    </td>
-                    <td class="text-center">
-                        {{s["num_users_received"]}}
-                    </td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
         </div>
     </div>
 </div>
+
+<div class="row mb-3">
+    <div class="col">
+        <div class="card">
+            <div class="table-responsive scrollbar">
+                <table class="table table-hover table-striped overflow-hidden">
+                    <thead>
+                        <tr class="fs--2">
+                            <th scope="col">Process start time</th>
+                            <th scope="col" class="text-center">Update status</th>
+                            <th scope="col" class="text-center">Last Update Date</th>
+                            <th scope="col" class="text-center">Process Time</th>
+                            <th scope="col" class="text-center">AVG time by user</th>
+                            <th scope="col" class="text-center">Num of users</th>
+                            <th class="text-center" scope="col">Received notifications</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for s in notifications %}
+                        <tr class="align-middle">
+                            <td class="text-nowrap">
+                                {{s["start_process_time"]}}
+                            </td>
+                            <td class="text-nowrap text-center">
+                                {%if s["error_status"] == 0%}
+                                <i class="fas fa-check text-success"></i>
+                                {%else%}
+                                <i class="fas fa-times text-danger"></i>
+                                {%endif%}
+                            </td>
+                            <td class="text-nowrap text-center">
+                                {{s["last_update_date"]}}
+                            </td>
+                            <td class="text-nowrap text-center">
+                                {{s["process_time"]}}
+                            </td>
+                            <td class="text-nowrap text-center">
+                                {{s["avg_time"]|round(2)}}
+                            </td>
+                            <td class="text-nowrap text-center">
+                                {{s["num_users"]}}
+                            </td>
+                            <td class="text-center">
+                                {{s["num_users_received"]}}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 {% endblock %}
 
