--- a/app/templates/admin/admin_index.html
+++ b/app/templates/admin/admin_index.html
@@ -50,6 +50,9 @@ Algotrader | Administration
             {{ dashboard_option('Telegram signals', 'admin.signals_status',
             description='All issued signals', icon='satellite-dish icon') }}
 
+            {{ dashboard_option('Notifications Monitor', 'admin.notification_statistic',
+            description='All issued notifications', icon='satellite-dish icon') }}
+
         </div>
     </div>
 </div>
