--- a/app/templates/admin/notification_statistic.html
+++ b/app/templates/admin/notification_statistic.html
@@ -41,7 +41,7 @@ Stock Score | Notifications
                     </div>
                 </div>
                 <div class="col-sm-auto pe-3">
-                    <a class="btn btn-outline-primary btn-sm mb-3" href="{{ url_for('connections.notifications_process') }}">
+                    <a class="btn btn-outline-primary btn-sm mb-3 run-notificaions" href="#">
                         Run Process
                     </a>
                 </div>
