--- a/app/templates/account/email/tickers_notification.html
+++ b/app/templates/account/email/tickers_notification.html
@@ -11,7 +11,7 @@
     </p>
 </div>
 <div>
-    <h4>{{d['company'}}</h4>
+    <h4>{{d['company']}}</h4>
     <p>Stock Score Rank: {{d['stocke_score']}}</p>
     <p>It is underpriced : {{d['underpriced']}}%</p>
     <p>it's Beta is : {{d['beta']}}</p>
