--- a/app/templates/account/subscriptions_new.html
+++ b/app/templates/account/subscriptions_new.html
@@ -25,13 +25,13 @@ Stock Score | Subscriptions
                         {% if current_user.is_anonymous %}
                         <a href="{{url_for('account.register', subscription=s.id)}}"
                            role="button"
-                           class="btn-transition btn registration {% if s.id == 3 %} disabled {%endif%}">
+                           class="btn-transition btn registration {% if s.id == 3 or s.id == 4 %} disabled {%endif%}">
                             {{s.price}}
                         </a>
                         {% else %}
                         <a href="{{url_for('account.change_subscription', id=s.id)}}"
                            role="button"
-                           class="btn-transition btn registration {% if s.id == 3 or s.id == user_subscription %} disabled {%endif%}">
+                           class="btn-transition btn registration {% if s.id == 3 or s.id == 4 or s.id == user_subscription %} disabled {%endif%}">
                             {% if s.id == 3 %}
                             {{s.price}}
                             {% elif s.id == user_subscription %}
