--- a/app/static/styles/subscriptions.css
+++ b/app/static/styles/subscriptions.css
@@ -31,7 +31,7 @@
     margin-left: 10px;
     margin-right: 10px;
     width: calc(35% - 40px);
-    height: 430px;}
+    height: 450px;}
     @media only screen and (max-width: 1279px) {
       .subscriptionsItems__col {
         width: calc(68.33333% - 40px); } }
@@ -126,4 +126,12 @@
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
     pointer-events: none;
     opacity: 0.65;
+}
+
+.text-blue {
+    color: #3f78b3;
+}
+
+.text-small {
+    font-size: 11px;
 }
