--- a/app/templates/partial/ticker_info_fundamentals_feed.html
+++ b/app/templates/partial/ticker_info_fundamentals_feed.html
@@ -1,3 +1,4 @@
+{% if data|length > 0%}
 {% for d in data %}
 <div class="col-md-4">
     <div class="m-1 border border-3">
@@ -70,3 +71,8 @@
     </div>
 </div>
 {% endfor %}
+{% else %}
+<div class="text-center mt-n3">
+    <p class="fallback fw-bold fs-1 text-400">Data Not Found.</p>
+</div>
+{% endif%}
