--- a/app/templates/partial/ticker_info_insiders.html
+++ b/app/templates/partial/ticker_info_insiders.html
@@ -1,3 +1,4 @@
+{% if data|length > 0%}
 <ul class="list-group list-group-flush">
     {% for d in data %}
         <li class="list-group-item">
@@ -40,3 +41,8 @@
         </li>
     {% endfor %}
 </ul>
+{% else %}
+<div class="text-center mt-n3">
+    <p class="fallback fw-bold fs-1 text-400">Data Not Found.</p>
+</div>
+{% endif%}
