--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -22,7 +22,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-PT4L2HXNL9');
+      gtag('config', 'G-MKEV1FBHBT');
     </script>
     <!-- ===============================================-->
     <!--    Favicons-->
