--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -16,7 +16,7 @@
     <!-- ===============================================-->
     <!--    Google Analytics-->
     <!-- ===============================================-->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PT4L2HXNL9"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MKEV1FBHBT"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
